Weird line break fix
Location was overflowing into temp when location name was too longer, reduced font size to fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -388,7 +388,7 @@ Only shown upon button press of "Change location"*/
         height: 8vh;
     }
     .location{
-        font-size: 8vw
+        font-size: 5vw
     }
     .temperature{
         font-size: 10vw;
